# navlit

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_CN.md  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh
.streamlit/: config.toml
navapp/: layout.py  main.py  utils.py
navapp/models/: __init__.py  favorite.py  trend.py  user.py  website.py
navapp/pages/: __init__.py  card.py  manage.py  navlit.py  trend.py  user.py
