[tool.poetry]
name = "navlit"
version = "0.1.0"
description = ""
authors = ["luoning <luoning.zhang@tuya.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
streamlit-extras = "^0.4.2"
streamlit-card = "^1.0.2"
streamlit-shadcn-ui = "^0.1.18"
sqlalchemy = "1.4"
streamlit-keyup = "^0.2.4"
streamlit-antd-components = "^0.3.2"
python-dotenv = "^1.0.1"
peewee = "^3.17.3"
extra-streamlit-components = "^0.1.71"
streamlit-navigation-bar = "^3.3.0"
streamlit = "1.34.0"
pandas = "^2.2.2"
streamlit-aggrid = "^1.0.5"
hydralit-components = "^1.0.10"
st-btn-group = "^0.0.11"
streamlit-modal = "^0.1.2"
requests = "^2.31.0"
pillow = "^10.3.0"
vega-datasets = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
